--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
           h1{
         border: solid;
     }
+    h4{
+        border: solid;
+    }
 
     </style>
 </head>
 <body>
+    <background- yellow></background->
     <h1 Align ="center">
         CSS
 </body>
@@ -20,11 +24,17 @@
 <a href="https://www.w3schools.com/css/css_intro.asp"> Activity 1 : CSS (Cascading Style Sheets) </a>
 <p>
 
+<h3>
+    <a href="#"> <img src="css.png" ></a>
+    <p>
+
+<h4>
+    <a href="w3schools.com/html/html_intro.asp"> Activity 2 : HTML (Hyper Text MarkUP Language)
     
-
-
-
-
+    </a>
+<P>
+<h5>
+    <a href="#"> <img src="html.png" ></a>
 
 
 
